--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/wpilibsuite/opencv.git
 [submodule "ffmpeg"]
 	path = ffmpeg
-	url = git://source.ffmpeg.org/ffmpeg.git
+	url = https://github.com/FFmpeg/FFmpeg.git
 [submodule "x264"]
 	path = x264
 	url = https://code.videolan.org/videolan/x264.git
