--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,21 +22,27 @@ stages:
     steps:
       - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
         submodules: true
-      - powershell: |
-          mkdir build
-          $ProgressPreference = 'SilentlyContinue'
-          wget "https://download.java.net/java/ga/jdk11/openjdk-11_windows-x64_bin.zip" -O "build\jdk.zip"
-        displayName: 'Download JDK'
-      - task: JavaToolInstaller@0
-        inputs:
-          jdkSourceOption: localDirectory
-          jdkFile: 'build/jdk.zip'
-          jdkDestinationDirectory: 'build/jdkinst'
-          jdkArchitectureOption: x64
+#     - powershell: |
+#         mkdir build
+#         $ProgressPreference = 'SilentlyContinue'
+#         wget "https://download.java.net/java/ga/jdk11/openjdk-11_windows-x64_bin.zip" -O "build\jdk.zip"
+#       displayName: 'Download JDK'
+#     - task: JavaToolInstaller@0
+#       inputs:
+#         jdkSourceOption: localDirectory
+#         jdkFile: 'build/jdk.zip'
+#         jdkDestinationDirectory: 'build/jdkinst'
+#         jdkArchitectureOption: x64
       - script: |
           @call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
-          set PATH=%PATH%;%ANT_HOME%\bin
-          gradlew build -PjenkinsBuild -PskipDebug
+#         set PATH=%PATH%;%ANT_HOME%\bin
+      - bash: |
+          mkdir build-x264-static
+          cd build-x264-static
+          CC=cl ../x264/configure --disable-cli --enable-static
+          make
+#     - script: |
+#         gradlew build -PjenkinsBuild -PskipDebug
         displayName: 'Gradle Build'
 
       - task: PublishPipelineArtifact@0
