--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,10 +36,10 @@ stages:
       - script: |
           @call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
 #         set PATH=%PATH%;%ANT_HOME%\bin
-      - bash: |
+#         set PATH=%PATH%;C:\\mingw\\msys\\1.0\\bin
           mkdir build-x264-static
           cd build-x264-static
-          CC=cl ../x264/configure --disable-cli --enable-static
+          bash -c "CC=cl ../x264/configure --disable-cli --enable-static"
           make
 #     - script: |
 #         gradlew build -PjenkinsBuild -PskipDebug
