--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,8 +33,14 @@ stages:
 #         jdkFile: 'build/jdk.zip'
 #         jdkDestinationDirectory: 'build/jdkinst'
 #         jdkArchitectureOption: x64
+      - powershell: |
+          $ProgressPreference = 'SilentlyContinue'
+          wget "https://www.nasm.us/pub/nasm/releasebuilds/2.14.02/win64/nasm-2.14.02-win64.zip" -O "nasm.zip"
+          mkdir nasm
+          Expand-Archive "nasm.zip" -DestinationPath "nasm"
       - script: |
           @call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
+          set PATH=%PATH%;%CD%\nasm
           set PATH=%PATH%;%ANT_HOME%\bin
           set PATH=%PATH%;C:\\mingw\\msys\\1.0\\bin
           mkdir build-x264-static
