--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,9 +38,8 @@ stages:
           wget "https://www.nasm.us/pub/nasm/releasebuilds/2.14.02/win64/nasm-2.14.02-win64.zip" -O "nasm.zip"
           Expand-Archive "nasm.zip"
       - script: |
-          dir nasm
           @call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
-          set PATH=%PATH%;%CD%\nasm
+          set PATH=%PATH%;%CD%\nasm\nasm-2.14.02
           set PATH=%PATH%;%ANT_HOME%\bin
           mkdir build-x264-static
           cd build-x264-static
