--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,17 +22,17 @@ stages:
     steps:
       - checkout: self  # self represents the repo where the initial Pipelines YAML file was found
         submodules: true
-#     - powershell: |
-#         mkdir build
-#         $ProgressPreference = 'SilentlyContinue'
-#         wget "https://download.java.net/java/ga/jdk11/openjdk-11_windows-x64_bin.zip" -O "build\jdk.zip"
-#       displayName: 'Download JDK'
-#     - task: JavaToolInstaller@0
-#       inputs:
-#         jdkSourceOption: localDirectory
-#         jdkFile: 'build/jdk.zip'
-#         jdkDestinationDirectory: 'build/jdkinst'
-#         jdkArchitectureOption: x64
+      - powershell: |
+          mkdir build
+          $ProgressPreference = 'SilentlyContinue'
+          wget "https://download.java.net/java/ga/jdk11/openjdk-11_windows-x64_bin.zip" -O "build\jdk.zip"
+        displayName: 'Download JDK'
+      - task: JavaToolInstaller@0
+        inputs:
+          jdkSourceOption: localDirectory
+          jdkFile: 'build/jdk.zip'
+          jdkDestinationDirectory: 'build/jdkinst'
+          jdkArchitectureOption: x64
       - powershell: |
           $ProgressPreference = 'SilentlyContinue'
           wget "https://www.nasm.us/pub/nasm/releasebuilds/2.14.02/win64/nasm-2.14.02-win64.zip" -O "nasm.zip"
@@ -41,14 +41,7 @@ stages:
           @call "C:\\Program Files (x86)\\Microsoft Visual Studio\\2019\\Enterprise\\VC\\Auxiliary\\Build\\vcvars64.bat"
           set PATH=%PATH%;%CD%\nasm\nasm-2.14.02
           set PATH=%PATH%;%ANT_HOME%\bin
-          mkdir build-x264-static
-          cd build-x264-static
-          echo %PATH%
-          nasm
-          bash -c 'CC=cl ../x264/configure --disable-cli --enable-static'
-          make
-#     - script: |
-#         gradlew build -PjenkinsBuild -PskipDebug
+          gradlew build -PjenkinsBuild -PskipDebug
         displayName: 'Gradle Build'
 
       - task: PublishPipelineArtifact@0
