Skip make step on windows

--- a/build.gradle
+++ b/build.gradle
@@ -255,27 +255,21 @@ if (project.platform == "linux-athena") {
         workingDir x264BuildDirectory.toString()
         def processors = Runtime.runtime.availableProcessors()
 
-        if (project.platform.startsWith("windows")) {
-            executable 'bash'
-            args = ["-c", "make -j${processors}"]
-        } else {
-            executable 'make'
-            args = ["-j${processors}"]
-        }
+        executable 'make'
+        args = ["-j${processors}"]
         inputs.file x264BuildDirectory.resolve("Makefile").toFile()
     }
 
     project.tasks.create('x264MakeInstall' + buildType, Exec) {
-        dependsOn 'x264Make' + buildType
+        if (project.platform.startsWith("windows")) {
+            dependsOn 'x264Configure' + buildType
+        } else {
+            dependsOn 'x264Make' + buildType
+        }
         workingDir x264BuildDirectory.toString()
 
-        if (project.platform.startsWith("windows")) {
-            executable 'bash'
-            args = ["-c", "make install"]
-        } else {
-            executable 'make'
-            args = ['install']
-        }
+        executable 'make'
+        args = ['install']
         inputs.file x264BuildDirectory.resolve("Makefile").toFile()
     }
 }
