--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,7 @@ stages:
           set PATH=%PATH%;%CD%\nasm\nasm-2.14.02
           set PATH=%PATH%;%ANT_HOME%\bin
           gradlew build -PjenkinsBuild -PskipDebug
+	  type "ffmpeg\\build\\ffbuild\\config.log"
         displayName: 'Gradle Build'
 
       - task: PublishPipelineArtifact@0
