--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,7 +46,7 @@ stages:
       - script: |
           type "ffmpeg\\build\\ffbuild\\config.log"
           dir /s x264
-          dir /s build/windows-x86_64/x264
+          dir /s "build\\windows-x86_64\\x264"
         condition: failed()
       - task: PublishPipelineArtifact@0
         inputs:
